--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,14 +26,22 @@ environment:
 # dependencies can be manually updated by changing the version numbers below to
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
+
+# 这里是我们在项目中引入的外部库，如果你想增加其他的库的话，请访问 pub.dev（需要翻墙）
+
 dependencies:
   flutter:
     sdk: flutter
 
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  connectivity_plus: ^2.3.7
   cupertino_icons: ^1.0.2
+
+  dio: ^4.0.0
+  dio_smart_retry: ^1.3.2
+
+  retry: ^3.1.0
+
+  shared_preferences: ^2.0.7
 
 dev_dependencies:
   flutter_test:
@@ -44,7 +52,6 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^1.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
